Fixed another alignment issue

--- a/styles.css
+++ b/styles.css
@@ -137,7 +137,7 @@ p {
 } */
 
 .main-screen {
-  padding: 15rem 0;
+  padding: 13rem 0;
 }
 
 /* .score-bar {
